--- a/ShopOnline.Api/appsettings.json
+++ b/ShopOnline.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ShopOnlineConnection;Integrated Security=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
